--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "clase-13",
+  "name": "Anabella Avena - Ilustradora Freelance",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sitio web dedicado a publicar trabajos de ilustración, promociones y venta de arte gráfico.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/styles.scss css/style.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
-  "author": "",
+  "author": "Robertino Cepparo",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^7.0.1",
