revision menor de sitio web

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Anabella Avena - Ilustradora Freelance",
+  "name": "anabella_avena_ilustradora_freelance",
   "version": "1.0.0",
   "description": "Sitio web dedicado a publicar trabajos de ilustración, promociones y venta de arte gráfico.",
   "main": "index.js",
